# LiDAR-Camera-PerceptionBench

./: .gitignore  NOTICE.md  README.md  README_EN.md  THIRD_PARTY.md  pyproject.toml  requirements-full.txt
docs/: ARCHITECTURE.md  CODE_MAP.md  EXPERIMENTS.md  INTERVIEW_GUIDE.md  REPRODUCIBILITY.md  RESULTS.md
evidence/: summary.json
tests/: test_cuda_libdevice_audit.py  test_current_status_snapshot.py  test_expanded_deployment_diagnostics.py  test_expanded_finetune_outputs.py  test_expanded_holdout_eval_comparison.py  test_expanded_split_distribution.py  test_expanded_training_report_claims.py  test_finetune_drift_checkpoint_sweep.py  test_finetune_drift_config_diff.py  test_finetune_drift_lr_sweep.py  test_finetune_drift_per_class_diagnostics.py  test_finetune_drift_report_claims.py  test_lidar_backbone_head_only_trt.py  test_lidar_calibration.py  test_lidar_calibration_sync_robustness.py  test_lidar_dbscan_baseline.py  test_lidar_decode_alignment_audit.py  test_lidar_dense_plot_data_exports.py  test_lidar_dense_ppt_panels.py  test_lidar_deployment_acceptance_dense_diagnostics.py  test_lidar_deployment_acceptance_matrix.py  test_lidar_deployment_acceptance_plot_data.py  test_lidar_deployment_acceptance_storyline.py  test_lidar_dir_cls_yaw_fix.py  test_lidar_eval_dashboard.py  test_lidar_eval_dashboard_backbone_head_trt.py  test_lidar_eval_dashboard_v2.py  test_lidar_failure_matcher.py  test_lidar_failure_matcher_audit.py  test_lidar_full_batch_registry.py  test_lidar_high_res_figures.py  test_lidar_kitti_export_audit.py  test_lidar_online_latency_schema.py  (+29 more)
(+94 files in other folders)
